Closed Bug 400854 Opened 17 years ago Closed 16 years ago

XUL menulist reacts to command keys with modifiers

Categories

(Core :: XUL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.1b1

People

(Reporter: pdm, Assigned: neil)

References

(Blocks 1 open bug, )

Details

(Keywords: access)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9a9pre) Gecko/2007102316 Minefield/3.0a9pre Build Identifier: Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9a9pre) Gecko/2007102316 Minefield/3.0a9pre When I define a global key command in a XUL page, bind the command to Control+SOMETHING and then try to invoke the command when some drop-down list element happens to be focused, the drop-down list changes its selected value (if SOMETHING matches some of its items) and invokes its own command (if any is bound to the menuitem). It behaves the same way as if SOMETHING was pressed without the Control modifier. Reproducible: Always Steps to Reproduce: 1. Open the XUL URL given above. 2. Press TAB to get the combo box element in focus. 3. Press Control+A and watch the raised dialogs. Actual Results: Combo box selected value changes from "xxxxx" to "abcde", the menuitem command is called and only then the actual command bound to Control-A gets called. Expected Results: Combo box value does not change after pressing the Control+A key combination (it remains "xxxxx") and the menuitem command doesn't get called. Only the command bound to Control+A in <keyset> is called.
Component: Keyboard Navigation → XP Toolkit/Widgets: Menus
Product: Firefox → Core
QA Contact: keyboard.navigation → xptoolkit.menus
Summary: Combo boxes react to command keys with modifiers → XUL menulist reacts to command keys with modifiers
This is a blocker for folks wanting to use XUL as a cross platform GUI toolkit.
Keywords: access
Attached patch Proposed patchSplinter Review
Assignee: nobody → neil
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
What's happening is that the menulist's key handler's modifier mask is being ignored because the binding isn't specifying a key or char code.
Attachment #336817 - Flags: superreview?(roc)
Attachment #336817 - Flags: review?(enndeakin)
Attachment #336817 - Flags: superreview?(roc) → superreview+
Blocks: 279001
Blocks: 191801
Attachment #336817 - Flags: review?(enndeakin) → review+
Pushed changset 92611f230d1c to mozilla-central.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
OS: Linux → All
Hardware: PC → All
Target Milestone: --- → mozilla1.9.1b1
Component: XP Toolkit/Widgets: Menus → XUL
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: