Bug 400854 XUL menulist reacts to command keys with modifiers r=Enn sr=roc